[gd_scene load_steps=15 format=3 uid="uid://ckdsudceoylqs"]

[ext_resource type="Script" path="res://Scripts/Menu/MainMenu.gd" id="1_drtum"]
[ext_resource type="Shader" path="res://Shaders/scroll.gdshader" id="1_k1dvq"]
[ext_resource type="Script" path="res://Scripts/Core/Conductor.gd" id="2_jhjwm"]
[ext_resource type="Texture2D" uid="uid://bfcbabvpni40r" path="res://Sprites/bg.png" id="2_vfx04"]
[ext_resource type="AudioStream" uid="uid://oldf1uf558jr" path="res://Music/track.ogg" id="3_hxxxc"]
[ext_resource type="Texture2D" uid="uid://gwjf3cyfl43g" path="res://Sprites/title.png" id="4_6urih"]
[ext_resource type="PackedScene" uid="uid://dwcks3ags7vri" path="res://Scenes/Objects/Captain.tscn" id="6_y7lse"]
[ext_resource type="Texture2D" uid="uid://xaqv06mtanp8" path="res://Sprites/dot.png" id="7_cf1j2"]
[ext_resource type="PackedScene" uid="uid://bygishwmk5d5j" path="res://Scenes/Objects/Column.tscn" id="7_dw4f0"]
[ext_resource type="PackedScene" uid="uid://drpan0avmchcv" path="res://Scenes/Objects/Obstacle.tscn" id="8_x3pvj"]
[ext_resource type="PackedScene" uid="uid://bbuo24wyxqqay" path="res://Scenes/Objects/Player.tscn" id="9_pywtq"]
[ext_resource type="Texture2D" uid="uid://bof2abmmlcr7r" path="res://Sprites/right_key_up.png" id="11_vnh01"]
[ext_resource type="FontFile" uid="uid://cfoaalrw3kscn" path="res://Fonts/m5x7.ttf" id="12_our7o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pavie"]
shader = ExtResource("1_k1dvq")

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_drtum")

[node name="Conductor" type="Node" parent="." groups=["conductor"]]
script = ExtResource("2_jhjwm")

[node name="Player" type="AudioStreamPlayer" parent="Conductor"]
stream = ExtResource("3_hxxxc")
volume_db = -6.0

[node name="MainCanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="MainCanvasLayer"]
material = SubResource("ShaderMaterial_pavie")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vfx04")
stretch_mode = 1

[node name="Captain" parent="MainCanvasLayer" instance=ExtResource("6_y7lse")]
position = Vector2(130, 762)

[node name="Tell" type="Sprite2D" parent="MainCanvasLayer/Captain"]
position = Vector2(120, 0)
scale = Vector2(2, 2)
texture = ExtResource("7_cf1j2")

[node name="Faker" parent="MainCanvasLayer" instance=ExtResource("6_y7lse")]
position = Vector2(130, 858)
is_faker = true

[node name="Tell" type="Sprite2D" parent="MainCanvasLayer/Faker"]
position = Vector2(120, 0)
scale = Vector2(2, 2)
texture = ExtResource("7_cf1j2")

[node name="Columns" type="Node2D" parent="MainCanvasLayer"]

[node name="Column1" parent="MainCanvasLayer/Columns" instance=ExtResource("7_dw4f0")]
position = Vector2(340, 1870)

[node name="Column2" parent="MainCanvasLayer/Columns" instance=ExtResource("7_dw4f0")]
position = Vector2(420, 1870)

[node name="Column3" parent="MainCanvasLayer/Columns" instance=ExtResource("7_dw4f0")]
position = Vector2(500, 1870)

[node name="Column4" parent="MainCanvasLayer/Columns" instance=ExtResource("7_dw4f0")]
position = Vector2(580, 1870)

[node name="Obstacles" type="Node2D" parent="MainCanvasLayer"]

[node name="Obstacle1" parent="MainCanvasLayer/Obstacles" instance=ExtResource("8_x3pvj")]
position = Vector2(340, 720)
initial_flip_v = true

[node name="Obstacle2" parent="MainCanvasLayer/Obstacles" instance=ExtResource("8_x3pvj")]
position = Vector2(420, 720)
initial_flip_v = true

[node name="Obstacle3" parent="MainCanvasLayer/Obstacles" instance=ExtResource("8_x3pvj")]
position = Vector2(580, 720)
initial_flip_v = true

[node name="Obstacle4" parent="MainCanvasLayer/Obstacles" instance=ExtResource("8_x3pvj")]
position = Vector2(340, 810)
initial_flip_v = true

[node name="Obstacle5" parent="MainCanvasLayer/Obstacles" instance=ExtResource("8_x3pvj")]
position = Vector2(500, 810)
initial_flip_v = true

[node name="Obstacle6" parent="MainCanvasLayer/Obstacles" instance=ExtResource("8_x3pvj")]
position = Vector2(580, 810)
initial_flip_v = true

[node name="Player" parent="MainCanvasLayer" instance=ExtResource("9_pywtq")]
position = Vector2(420, 810)
is_controllable = false
invuln_time = 1e+07

[node name="LeftKey" type="Sprite2D" parent="MainCanvasLayer"]
position = Vector2(424, 622)
scale = Vector2(2, 2)
texture = ExtResource("11_vnh01")
flip_h = true

[node name="RightKey" type="Sprite2D" parent="MainCanvasLayer"]
position = Vector2(496, 622)
scale = Vector2(2, 2)
texture = ExtResource("11_vnh01")

[node name="Title" type="Sprite2D" parent="MainCanvasLayer"]
position = Vector2(320, 174)
scale = Vector2(4, 4)
texture = ExtResource("4_6urih")

[node name="PlayText" type="RichTextLabel" parent="MainCanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -79.0
offset_right = 320.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 35)
theme_override_fonts/normal_font = ExtResource("12_our7o")
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[center]Press Space to play![/center]"

[node name="TutorialText" type="RichTextLabel" parent="MainCanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -472.0
offset_top = 135.0
offset_right = 168.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.174533
pivot_offset = Vector2(320, 30)
theme_override_fonts/normal_font = ExtResource("12_our7o")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]How to play:[/center]"
